修复jquery $的问题

--- a/第二章.md
+++ b/第二章.md
@@ -98,7 +98,7 @@ typings install npm~module --g--save
 <pre>
 npm install @types/jquery --save-dev
 使用
-import \$ = require('jquery');
+import $ = require('jquery');
 $(function() {
 	console.log(1);
 });
