删除项目使用yeoman创建项目

--- a/第二章.md
+++ b/第二章.md
@@ -92,7 +92,7 @@ typings install env~module --g--save
 typings install npm~module --g--save
 </pre>
 
-举个栗子
+举个栗子<br>
 如何引入jquery;
 好像在typings安装jquery有问题这里一定要使用npm安装jquery
 <pre>
@@ -103,3 +103,175 @@ $(function() {
 	console.log(1);
 });
 </pre>
+
+####自动化工具
+项目目录如下
+
+```
+|----LICENSE
+|----README.md
+|----index.html
+|----gulpfile.js
+|----karma.conf.js
+|----typings.json
+|----package.json
+|----package-lock.json
+|----bower.json
+|----source
+|    |----ts
+|         |----*.ts
+|----test
+|    |----*.test.ts
+|----data
+|    |----*.json
+|----node_modules
+|----bower_components
+|----typings      
+```
+
+
+<pre>
+npm install -g guplp //全局安装gulp
+npm install --save-dev gulp //将gulp作为开发依赖
+</pre>
+
+接着在项目找到<code>gulpfile.js</code>的文件添加如下代码 
+<pre>
+var gulp = require('gulp');
+gulp.task('default',function(){
+    console.log("Hello Gulp!")
+})
+</pre>
+
+是后执行<code>gulp</code>命令，输出结果如下：
+<pre>
+Hello Gulp!
+</pre>
+
+检查TypeScript代码的质量
+
+<pre>
+npm install gulp-tslint --save-dev //安装 tslint
+</pre>
+
+在<code>gulpfile.js</code>中添加一个新任务
+
+<pre>
+var tslint = require('gulp-tslint')
+gulp.task('lint',function(){
+    reuturn gulp
+            .src(
+                [
+                    './source/ts/**/**.ts',
+                    './test/**/**.test.ts',
+                    '!./path.*.d.ts'//忽略一些文件
+                ]
+            )//从source/ts的目录下的所有.ts的文件和test目录下的所有.ts
+            .pipe(tslint())//通过tslint检查
+            .pipe(tslint.report('verbose'))//
+})
+gulp.task('default',['lint'])
+</pre>
+
+编译TypeScript代码
+
+<pre>
+npm install gulp-typescript --save-dev //安装gulp的依赖gulp-typescript插件
+</pre>
+
+在<code>gulpfile.js</code>中新添加一个任务
+
+<pre>
+var ts = require('gulp-typescript')
+<!--项目编译-->
+var tsProject = ts.createProject({
+	removeComments: true,
+	noImplicitAny: true,
+	target: 'es5',
+	module: 'commonjs',
+	declarationFiles: false
+});
+<!--编译-->
+gulp.task('tsc', function() {
+	return gulp
+		.src('./source/ts/**/**.ts')//文件源
+		.pipe(ts(tsProject))//通过gulp-typescript插件进行编译
+		.js.pipe(gulp.dest('./temp/source/js'));//输出的目录
+});
+<!--测试-->
+gulp.task('tsc-tests', function() {
+	return gulp
+		.src('./test/**/**.test.ts')
+		.pipe(ts(tsProject))
+		.js.pipe(gulp.dest('./temp/test'));
+});
+</pre>
+
+优化TypeScript应用
+
+>RequireJs即(AMD模式)异步模块加载
+>CommonJs
+
+因为<code>Browserify</code>和<code>gulp</code>是高度集成的，所以这里选用<code>CommonJs</code>
+
+
+<pre>
+npm install browserify vinyl-transform gulp-uglify gulp-sourcemaps //安装一些使用模块
+</pre>
+
+在<code>gulpfile.js</code>中新添加一个任务
+
+<pre>
+var browserify = require('browserify'),
+	transform = require('vinyl-transform'),
+	uglify = require('gulp-uglify'),
+	sourcemaps = require('gulp-sourcemaps');
+
+var browserified = transform(function(filename) {
+	var b = browserify({ entries: filename, debug: true });
+	return b.bundle();
+});
+
+
+// 优化项目文件
+gulp.task('bundle-js', function() {
+	return gulp
+		.src('./temp/source/js/main.js')
+		.pipe(browserified)
+		.pipe(sourcemaps.init({ loadMaps: true }))
+		.pipe(uglify())
+		.pipe(sourcemaps.write('./'))
+		.pipe(gulp.dest('./dist/source/js'));
+});
+// 优化项目测试的文件
+gulp.task('bundle-test', function() {
+	return gulp
+		.src('./temp/test/**/**.test.js')
+		.pipe(browserified)
+		.pipe(gulp.dest('./dist/test/'));
+});
+
+//添加到Default的任务里
+gulp.task('default', ['lint', 'tsc', 'tsc-tests','bundle-js','bundle-test']);
+</pre>
+
+在此处安装时出现问题
+<pre>
+internal/modules/cjs/loader.js:583
+    throw err;
+    ^
+
+Error: Cannot find module 'typescript'
+    at Function.Module._resolveFilename (internal/modules/cjs/loader.js:581:15)
+    at Function.Module._load (internal/modules/cjs/loader.js:507:25)
+    at Module.require (internal/modules/cjs/loader.js:637:17)
+    at require (internal/modules/cjs/helpers.js:20:18)
+    at Object.<anonymous> (/Users/huangxinmin/Documents/typescript/gittypescript/typescript1/node_modules/tslint/lib/utils.js:21:10)
+    at Module._compile (internal/modules/cjs/loader.js:689:30)
+    at Object.Module._extensions..js (internal/modules/cjs/loader.js:700:10)
+    at Module.load (internal/modules/cjs/loader.js:599:32)
+    at tryModuleLoad (internal/modules/cjs/loader.js:538:12)
+    at Function.Module._load (internal/modules/cjs/loader.js:530:3)
+</pre>
+待查
+最后还是使用Yeoman脚手架来创建吧
